The wasm bytecode is no longer hidden in disassembly on narrow displays

--- a/main.css
+++ b/main.css
@@ -211,14 +211,10 @@ button {
   box-sizing: border-box;
 }
 .wasm-byte-offset {
-  color: #808080;
   font-weight: bold;
 }
-.wasm-comment {
+.wasm-comment, .wasm-byte-offset {
   color: #808080;
-}
-.wasm-comment::before {
-  content: "; ";
 }
 
 .project-list-entry {
@@ -287,13 +283,6 @@ button {
 
 .menu-input:focus {
   width: 100%;
-}
-
-/* small portrait screens */
-@media only screen and (max-aspect-ratio: 1/1) and (max-width: 450px) {  
-  .wasm-data, .wasm-comment::before, .wasm-byte-offset {
-    display: none;
-  }
 }
 
 .keyword, .keyword::first-line {
